src/test/ui/regions/regions-infer-bound-from-trait.stderr
error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-infer-bound-from-trait.rs:33:5
   |
LL | fn bar1<'a,A>(x: Inv<'a>, a: A) {
   |            - help: consider adding an explicit lifetime bound `A: 'a`...
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^
   |
note: ...so that the type `A` will meet its required lifetime bounds
  --> $DIR/regions-infer-bound-from-trait.rs:33:5
   |
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^

error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-infer-bound-from-trait.rs:37:5
   |
LL | fn bar2<'a,'b,A:Is<'b>>(x: Inv<'a>, y: Inv<'b>, a: A) {
   |               -- help: consider adding an explicit lifetime bound `A: 'a`...
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^
   |
note: ...so that the type `A` will meet its required lifetime bounds
  --> $DIR/regions-infer-bound-from-trait.rs:37:5
   |
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
